# DeepfilterNet_onnx_openvino

DeepFilterNet/: requirements.txt  requirements_eval.txt
bench_mark/deepfilternet/: CMakeLists.txt
bench_mark/deepfilternet/model/onnx/include/: deep_filter.h
bench_mark/deepfilternet/model/openvino/deepfilternet3/: df_dec.xml  enc.xml  erb_dec.xml
bench_mark/deepfilternet/src/: deepfilter.cpp  deepfilter.hpp  dfnet_model.cpp  dfnet_model.hpp  main.cpp  musicgen_utils.cpp  musicgen_utils.hpp
demo/: Cargo.toml
